Added one more answer option

--- a/Exercises/TreeBSTminHeap.html
+++ b/Exercises/TreeBSTminHeap.html
@@ -165,6 +165,7 @@
 			<var id="OPT1">"Binary Search Tree"</var>
 			<var id="OPT2">"Min Heap"</var>
 			<var id="OPT3">"Neither BST not MinHeap"</var>
+			<var id="OPT4">"Both BST and Minheap"</var>
 			<var id="INDEX">asel-1</var>
 			<var id="ANSWER">[ OPT1, OPT2, OPT3 ] </var>
 		</div>
@@ -181,6 +182,7 @@
 					<li><var>OPT1</var></li>
                                         <li><var>OPT2</var></li>
                                         <li><var>OPT3</var></li>
+					<li><var>OPT4</var></li>
                                 </ul>
 			</div>
 		</div>
