Updated all knaspsack visualizations and KA exercises by Jeremy Rodencal of UWOshkosh.
Also added Jeremy's N-choose-K slideshow

Finally added Jeremy's initial attempt at an RST file for the Dynamic Programming tutorial material.   Much remain to be done on this, including figuring out how to embed the visualizations into the page.
Problems in doing this may be linked to our better understanding the role of the corresponding xml file.

--- a/AV/nChooseKTrim.html
+++ b/AV/nChooseKTrim.html
@@ -2,24 +2,11 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-    <title>Knapsack Call Tree</title>
+    <title>N Choose K</title>
     <link rel="stylesheet" href="../JSAV/css/JSAV.css" type="text/css" media="screen" title="kd-tree" charset="utf-8" />
      <link href="opendsaAV.css" title="CSS" rel="stylesheet" type="text/css" />
-  
-    <style>
-    #av { width: 98%;}
-    .jsavtree {
-      position: relative;
-      width: 500px;
-      height: 300px;
-    }
-    svg {
-      height: 600px;
-    }
-    path {
-      pointer-events: visible;
-    }
-    </style>
+
+
 
   </head>
   <body>
@@ -43,8 +30,8 @@
     <script src="../JSAV/lib/jquery.transform.light.js"></script>
     <script src="../JSAV/lib/raphael.js"></script>
     <script src="../JSAV/build/JSAV.js"></script>
-    <script src="sackCallTree.js"></script>
-
+    <script src="generalDynamicForm.js"></script>
+    <script src="nChooseKTrim.js"></script>
 
   </body>
 </html>
