--- a/AV/sackTraceBack.html
+++ b/AV/sackTraceBack.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
     <title>Knapsack Tree Reduction</title>
     <link rel="stylesheet" href="../JSAV/css/JSAV.css" type="text/css" media="screen" title="kd-tree" charset="utf-8" />
      <link href="opendsaAV.css" title="CSS" rel="stylesheet" type="text/css" />
@@ -29,61 +30,7 @@
     <script src="../JSAV/lib/jquery.transform.light.js"></script>
     <script src="../JSAV/lib/raphael.js"></script>
     <script src="../JSAV/build/JSAV.js"></script>
-    <script src="sackCallTree.js"></script>
     <script src="sackTraceBack.js"></script>
-
-
-
-    <div id="av">
-      <div class="jsavcontrols"></div>
-      <p class="jsavoutput jsavline"></p>
-    </div>
-
-    <script>
-
-    var jsav = new JSAV("av");
-    var itemArray = [];
-    var dynTable = [];
-    var solSet = jsav.ds.array(["", "", ""], {centered: false, right:50, top:0});    
-
-    //init the arrays with values for items
-    itemArray[0] = jsav.ds.array([1, 2, 3], {centered: false, left:50, top:0}); //item
-    itemArray[1] = jsav.ds.array([3, 2, 2], {centered: false, left:50, top:40});//weight
-    itemArray[2] = jsav.ds.array([3, 8, 4], {centered: false, left:50, top:80});//value
-
-    //this was what I was going to label the arrays with. didn't work out...
-    jsav.label("Item", {left: 175, top: 12});
-    jsav.label("Weight", {left: 175, top: 52});
-    jsav.label("Value", {left: 175, top: 92});
-    jsav.label("Item Table", {left: 70, top: -20})
-
-    jsav.label("Knapsack", {right: 75, top:-20})
-
-    //set up the table with the base cases and blank other spaces
-    dynTable[0] = jsav.ds.array([0, 0, 0, 0, 0, 0, 0]);
-    dynTable[1] = jsav.ds.array([0, "", "", "", "", "", ""]);
-    dynTable[2] = jsav.ds.array([0, "", "", "", "", "", ""]);
-    dynTable[3] = jsav.ds.array([0, "", "", "", "", "", ""]);
-
-    //make sure that we can see the arrays
-    for(i = 0; i < itemArray.length; i++)
-    {
-        itemArray[i].show();
-    }
-    for(i = 0; i < itemArray.length; i++)
-    {
-        dynTable[i].show();
-    }
-    
-    //fills in every cell in the dp lookup table
-    //using the data form the item array
-    fillTableComplete(dynTable, itemArray);
-
-    //animate through the recovery of the answer
-    findSolSet(solSet, dynTable, itemArray);
-    jsav.step();
-    jsav.recorded();
-    </script>
 
   </body>
 </html>
