--- a/Exercises/knapsackSelect.html
+++ b/Exercises/knapsackSelect.html
@@ -13,12 +13,14 @@
   <script src="../JSAV/build/JSAV-min.js"></script>
   <link rel="stylesheet" href="../JSAV/css/JSAV.css" type="text/css" />
 
+
 <style>
 .jsavcontainer {
   border: 0px;
-}
+  height: 300px}
+  .jsavarray { margin: 0; height: 40px; min-height: 40px; }
+  .jsavarray li { border-radius: 0 !important; height: 40px; width: 40px; font-size: 14px; line-height: 40px;}
 </style>
-
 <body>
 <script>
 
@@ -28,20 +30,17 @@
     }
 
     var jsav, arr, myGuess, currPos, item, table;
-      
-    // function to handle a click event on an array
-    /*var clickHandler = function(index, e) {
-      arr.unhighlight();
-      arr.highlight(index);
-      myGuess = arr.value(index);
-      currPos = index;
-    }*/
     
     initJSAV = function(a) 
     {
         jsav = new JSAV("jsav", {"animationMode": "none"});
-        item = jsav.ds.array([randomInt(1,4), randomInt(1,5)]);
+        item = jsav.ds.array([randomInt(1,4), randomInt(1,5)], 
+            {centered:false, left:"20px" , top: "10px", layout:"vertical"});
 
+        //label the item
+        jsav.label("Item", {left: "25px", top: "-10px"});
+        jsav.label("Weight", {left: "70px", top: "20px"});
+        jsav.label("Value", {left: "70px", top: "60px"})
         //build a section of the dynamic table for the question
         var row = [];
         for(var i = 0; i < 5; i++)
@@ -52,27 +51,17 @@
                 row[i] = row[i-1] + randomInt(0, 3); 
         }
         table = [];
-        table[0] = jsav.ds.array(row);
+        table[0] = jsav.ds.array(row, {top:"30px"});
         row = [];
         for(var i = 0; i < table[0].size(); i++)
         {
             row[i] = "-";
         }
-        table[1] = jsav.ds.array(row);
+        table[1] = jsav.ds.array(row, {top:"70px"});
         table[1].css(table[1].size()-1, {"background-color":"#00FF00"});
+        jsav.label("Item", {top:(parseInt(table[0].css("top"))+10), left:(parseInt(table[0].css("left")) - 30)})
+        jsav.label("Weight", {top:(parseInt(table[0].css("top"))-25), left:(parseInt(table[0].css("left")))})
         jsav.forward();
-        /*
-        var i;
-        max = 0; // Must do these initializations each time the exercise initializes
-        myGuess = -1;
-        jsav = new JSAV("jsav", {"animationMode": "none"});
-        arr = jsav.ds.array(JSAV.utils.rand.numKeys(0, 999, a));
-        for (i=0; i < a; i++) {
-          if( arr.value(i) > max) max = arr.value(i);
-        }
-        // bind the clickHandler to handle click events on the array
-        arr.click(clickHandler);
-        */
     }
 
 genAnswer = function() {
