--- a/Exercises/Sorting/RadixSortMCQ1.html
+++ b/Exercises/Sorting/RadixSortMCQ1.html
@@ -24,15 +24,15 @@
      
     <!-- Question MCQ -->
     	
-	div id="problem-type-or-description">
-      <p class="question"> Radix sort does not work correctly (i.e. does not produce the correct output)if we sort each individual digit using insertion sort. </p>
+    <div id="problem-type-or-description">
+      <p class="question"> Radix sort does not work correctly (i.e. does not produce the correct output) if we sort each individual digit using insertion sort. </p>
       <div class="solution"><var>"False"</var></div>
       <ul class="choices" data-category="true">
 	<li><var>"True"</var></li>
 	<li><var>"False"</var></li>			  	  	 
       </ul>
 	  <div class="hints">
-	    <p> Is insertion sort is stable?</p>
+	    <p> Is insertion sort stable?</p>
 	   </div>
     </div> 
 	
