--- a/Exercises/Sorting/RadixSortMCQ2.html
+++ b/Exercises/Sorting/RadixSortMCQ2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math spin graphie graphie-helpers-arithmetic word-problems">
 <head>
-  <title>OpenDSA Radix Sort Exercise: Multiple Choice Question 1</title>
+  <title>OpenDSA Radix Sort Exercise: Multiple Choice Question 2</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
 <script type="text/javascript"
@@ -24,16 +24,15 @@
      
     <!-- Question MCQ -->
     	
-	<div id="problem-type-or-description">
-      <p class="question"> Radix sort does not work correctly (i.e. does not produce the correct output)if we sort each individual digit using insertion sort. </p>
-      <div class="solution"><var>"False"</var></div>
-      <ul class="choices" data-category="true">
-	<li><var>"True"</var></li>
-	<li><var>"False"</var></li>			  	  	 
+	div id="problem-type-or-description">
+      <p class="question"> A main disadvanyage of Radix sort is: </p>
+      <div class="solution"><var>"Needs lots of auxiliary storage."</var></div>
+      <ul class="choices">
+	<li><var>"Is not stable(i.e. equal keys may not end up to be in the same bucket in the same order)."</var></li>
+	<li><var>"Requires long time to finish (i.e. slow algorithm)."</var></li>
+	<li><var>"None of the above."</var></li>	  	 
       </ul>
-	  <div class="hints">
-	    <p> Is insertion sort stable?</p>
-	   </div>
+	  
     </div> 
 	
   </div>
