Heap sort more questions added

--- a/Exercises/Sorting/HeapSortMCQ3.html
+++ b/Exercises/Sorting/HeapSortMCQ3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math spin graphie graphie-helpers-arithmetic word-problems">
 <head>
-  <title>OpenDSA Radix Sort Exercise: Multiple Choice Question 5</title>
+  <title>OpenDSA Heap Sort Exercise: Multiple Choice Question 3</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
 <script type="text/javascript"
@@ -25,15 +25,14 @@
     <!-- Question MCQ -->
     	
 	<div id="problem-type-or-description">
-      <p class="question"> The maximum numberof comparisons needed to sort 7 items using radix sort is (assume each item is a 4 digit decimal number)</p>
-      <div class="solution"><var>"280"</var></div>
+      <p class="question"> A main disadvanyage of Heap sort is: </p>
+      <div class="solution"><var>" Is not stable(i.e. equal keys may not end up to be in the same bucket in the same order).Needs lots of auxiliary storage."</var></div>
       <ul class="choices">
-	<li><var>"40"</var></li>
-	<li><var>"47"</var></li>
-	<li><var>"38"</var></li>	  	 
-      </ul>
+	<li><var>"Needs lots of auxiliary storage."</var></li>
+	<li><var>"Its average case running time is O(N^2)."</var></li>
+	<li><var>"None of the above."</var></li>
 	  
-    </div> 
+    </div>
 	
   </div>
 </div>
