--- a/Exercises/Sorting/HeapSortMCQ4.html
+++ b/Exercises/Sorting/HeapSortMCQ4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math spin graphie graphie-helpers-arithmetic word-problems">
 <head>
-  <title>OpenDSA Radix Sort Exercise: Multiple Choice Question 5</title>
+  <title>OpenDSA Heap Sort Exercise: Multiple Choice Question 4</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
 <script type="text/javascript"
@@ -25,15 +25,14 @@
     <!-- Question MCQ -->
     	
 	<div id="problem-type-or-description">
-      <p class="question"> The maximum numberof comparisons needed to sort 7 items using radix sort is (assume each item is a 4 digit decimal number)</p>
-      <div class="solution"><var>"280"</var></div>
+      <p class="question"> How much extra space is used by heap sort? </p>
+      <div class="solution"><var><code>\Theta(1)</code></var></div>
       <ul class="choices">
-	<li><var>"40"</var></li>
-	<li><var>"47"</var></li>
-	<li><var>"38"</var></li>	  	 
-      </ul>
+	<li><var><code>\Theta(\log n)</code></var></li>
+	<li><var><code>\Theta(n)</code></var></li>
+	<li><var><code>\Theta(n^2)</code></var></li>
 	  
-    </div> 
+    </div>
 	
   </div>
 </div>
