--- a/Exercises/Sorting/HeapSortSumm.html
+++ b/Exercises/Sorting/HeapSortSumm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math spin graphie graphie-helpers-arithmetic word-problems">
 <head>
-  <title>OpenDSA Radix Sort Exercise: Multiple Choice Question 6</title>
+  <title>OpenDSA Heap Sort: Multiple Choice Summary</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
 <script type="text/javascript"
@@ -12,29 +12,12 @@
   <script src="../../JSAV/build/JSAV-min.js"></script>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
 </head>
-<body>
-
-<div class="exercise">
-    <div class = "vars">
-      <var id="TYPES">[ "True", "False" ]</var>
-      <var id="GBAns">randFromArray( TYPES )</var>
-      <var id="GB">(GBAns === "True") ? "good" : "bad"</var>
-    </div>
-  <div class="problems">
-     
-    <!-- Question MCQ -->
-    	
-	<div id="problem-type-or-description">
-      <p class="question"> We use any stable sorting algorithm and radix sort will still sort correctly</p>
-     <div class="solution"><var>"True"</var></div>
-      <ul class="choices" data-category="true">
-	<li><var>"True"</var></li>
-	<li><var>"False"</var></li>			  	  	 
-      </ul>
-	  
-    </div> 
-	
-  </div>
-</div>
-</body>
+ <body>
+      <div class="exercise" data-name="HeapSortMCQ1" ></div>  
+      <div class="exercise" data-name="HeapSortMCQ2" ></div>
+	  <div class="exercise" data-name="HeapSortMCQ3" ></div>  
+	  <div class="exercise" data-name="HeapSortMCQ4" ></div>  
+	  <div class="exercise" data-name="HeapSortMCQ5" ></div>  
+	 
+  </body>
 </html>
