--- a/Exercises/Sorting/RadixSortMCQ2.html
+++ b/Exercises/Sorting/RadixSortMCQ2.html
@@ -24,7 +24,7 @@
      
     <!-- Question MCQ -->
     	
-	div id="problem-type-or-description">
+	<div id="problem-type-or-description">
       <p class="question"> A main disadvanyage of Radix sort is: </p>
       <div class="solution"><var>"Needs lots of auxiliary storage."</var></div>
       <ul class="choices">
