--- a/Exercises/Sorting/RadixSortMCQ3.html
+++ b/Exercises/Sorting/RadixSortMCQ3.html
@@ -24,7 +24,7 @@
      
     <!-- Question MCQ -->
     	
-	div id="problem-type-or-description">
+	<div id="problem-type-or-description">
       <p class="question"> Would the radix sort be a good solution for alphabetizing words?</p>
       <div class="solution"><var>"No it wouldn't, there are too many possible characters in the alphabet."</var></div>
       <ul class="choices">
