--- a/Exercises/Sorting/HeapSortMCQ3.html
+++ b/Exercises/Sorting/HeapSortMCQ3.html
@@ -25,13 +25,14 @@
     <!-- Question MCQ -->
     	
 	<div id="problem-type-or-description">
-      <p class="question"> A main disadvanyage of Heap sort is: </p>
+      <p class="question"> A main disadvantage of Heap sort is: </p>
       <div class="solution"><var>" Is not stable(i.e. equal keys may not end up to be in the same bucket in the same order).Needs lots of auxiliary storage."</var></div>
       <ul class="choices">
 	<li><var>"Needs lots of auxiliary storage."</var></li>
-	<li><var>"Its average case running time is O(N^2)."</var></li>
+	<li><var>"Its Average case running time is O(N^2)."</var></li>
 	<li><var>"None of the above."</var></li>
-	  
+	 </ul>  
+     
     </div>
 	
   </div>
