--- a/Exercises/Sorting/RadixSortMCQ2.html
+++ b/Exercises/Sorting/RadixSortMCQ2.html
@@ -25,7 +25,7 @@
     <!-- Question MCQ -->
     	
 	<div id="problem-type-or-description">
-      <p class="question"> A main disadvanyage of Radix sort is: </p>
+      <p class="question"> A main disadvantage of Radix sort is: </p>
       <div class="solution"><var>"Needs lots of auxiliary storage."</var></div>
       <ul class="choices">
 	<li><var>"Is not stable(i.e. equal keys may not end up to be in the same bucket in the same order)."</var></li>
