--- a/Exercises/Sorting/BinSortMCQ1.html
+++ b/Exercises/Sorting/BinSortMCQ1.html
@@ -25,7 +25,7 @@
      
     <!-- Question MCQ -->  	
 	<div id="problem-type-or-description">
-      <p class="question"> Bin sort time complexity depends on the initial ordering of the keys in the input array.</p>
+      <p class="question"> Bin sort's time complexity depends on the initial ordering of the keys in the input array.</p>
       <div class="solution"><var>"False"</var></div>
       <ul class="choices" data-category="true">
 	<li><var>"True"</var></li>
