--- a/AV/quicksort-proficiency.html
+++ b/AV/quicksort-proficiency.html
@@ -8,7 +8,7 @@
 
 	#container {
 		width: 780px;
-		height: 640px;
+		height: 340px;
 		border: 1px solid black;
 		background-color: #efe;
 		padding: 10px;
@@ -80,13 +80,13 @@
 		<form style="border: 0px" id="mergesort_proficiency">
 			<p style="margin-top:-5px">Instructions:</p>
 			<p style="margin-top: -15px; padding: 10px; 10px; margin-right: 10px; border: 1px solid black">
-			Select the pivot element, move it to the appropriate location, then select the left and right endpoints of the range you wish to partition and click "Partition".  Once the partition operation is complete, click the location where the pivot point should be moved.  When a selected element has been moved to its final sorted location, click "Mark as Sorted".  If a sublist contains a single element, you must still mark it as sorted.
+			Select the pivot element, move it to the appropriate location, then select the left and right endpoints of the range you wish to partition and click "Partition".  Once the partition operation is complete, click the location where the pivot point should be moved.  When a selected element has been moved to its final sorted location, click "Mark Selected as Sorted".  If a sublist contains a single element, you must still mark it as sorted.
 			</p>
 			
 			<p class="jsavoutput jsavline"></p>
 			<div>
 				<input type="button" name="partition" value="Partition" />
-				<input type="button" name="markSorted" value="Mark as Sorted" />
+				<input type="button" name="markSorted" value="Mark Selected as Sorted" />
 			</div>
 		</form>
 		<div id="arrays" class="jsavcanvas">
@@ -99,7 +99,7 @@
 	$('input[name="help"]').click(help);
 	$('input[name="about"]').click(about);
 	$('input[name="partition"]').click(partitionButton);
-	$('input[name="markSorted"]').click(markSorted);
+	$('input[name="markSorted"]').click(markSortedButton);
 	
 	// Process help button: Give a full help page for this activity
 	// We might give them another HTML page to look at.
@@ -122,11 +122,13 @@
         av = new JSAV($("#container"));
 		
 	var userArr = [];
-	var pivotIndex = -1;
-	var pivotMoved = false;
-	var partitioned = false;
-	var left = 0; 
-	var right = 0;
+	
+	// Initialize the variables
+	var pivotIndex = av.variable(-1);
+	var pivotMoved = av.variable(false);
+	var partitioned = av.variable(false);
+	var left = av.variable(-1);
+	var right = av.variable(-1);
 
     av.recorded(); 		// we are not recording an AV with an algorithm
 	
@@ -137,7 +139,7 @@
 	 * Processes the reset button
 	 * 		- Clears existing arrays
 	 * 		- Generates a new set of random numbers to sort
-	 * 		- Initializes the arrays the user will use to merge
+	 * 		- Initializes the array the user will sort
 	 */
     function initialize() {
 		// Clear all existing arrays
@@ -153,16 +155,12 @@
 		userArr = av.ds.array(initialArray, {indexed: true, layout: "array"});
 		userArr.click(function(index){clickHandler(this, index)});
 		
-		pivotIndex = -1;
-		pivotMoved = false;
-		partitioned = false;
-		left = -1;
-		right = -1;
-
+		resetStateVars();
+		
 		//av.umsg("Directions: Click on a numbered block to select it.  Then click on an empty block where it should be placed."); 
 		av.forward();
 		av._undo = [];
-		return initialArray;
+		return userArr;
     }
 	
 	/**
@@ -176,32 +174,36 @@
 		return modelArr;
 	}
 	
+	/**
+	 * Sorts the specified array using quicksort while marking various 
+	 * steps where the model answer will be compared against the user's 
+	 * solution for grading purposes
+	 */
 	function quicksort(jsav, arr, i, j)
 	{
-		//alert("beginning of quicksort");
-		
+		// Select the pivot
 		var pivotIndex = Math.floor((i + j) / 2);
 		arr.highlightPivot(pivotIndex);
-		
-		//alert("i: " + i + ", j: " + j + ", pIndex: " + pivotIndex);
-		
-		//jsav.stepOption("grade", true);
 		jsav.step();
 		
+		// Move the pivot to the end of the list being sorted
 		arr.swap(pivotIndex, j);
 		jsav.stepOption("grade", true);
 		jsav.step();
-		
-		//alert("after swap");
 
+		// Partition the array
 		// k will be the first position in the right subarray
 		var k = partition(arr, i, j, arr.value(j));
 		jsav.stepOption("grade", true);
 		jsav.step();
 		
-		arr.swap(k, j);
-		jsav.stepOption("grade", true);
-		jsav.step();
+		// If the pivot is already in its final location, don't need to swap it
+		if (k != j)
+		{
+			arr.swap(k, j);
+			jsav.stepOption("grade", true);
+			jsav.step();
+		}
 		
 		arr.markSorted(k);
 		jsav.stepOption("grade", true);
@@ -212,7 +214,7 @@
 		{
 			quicksort(jsav, arr, i, k - 1);
 		}
-		else
+		else if ((k - i) == 1)
 		{
 			// If the sublist is a single element, mark it as sorted
 			arr.markSorted(i);
@@ -225,7 +227,7 @@
 		{
 			quicksort(jsav, arr, k + 1, j);
 		}
-		else
+		else if ((j - k) == 1) 
 		{
 			// If the sublist is a single element, mark it as sorted
 			arr.markSorted(j);
@@ -234,6 +236,16 @@
 		}
 	}
 	
+	/**
+	 * Partitions the elements of an array within the specified range 
+	 * so that all values less than the pivot value are farthest to 
+	 * the left and values larger than the pivot are farthest to the right
+	 *
+	 * arr - the array containing the elements to partition
+	 * l - the left endpoint of the range to partition
+	 * r - the right endpoint of the range to partition
+	 * pivot - the value to compare all the elements against
+	 */
 	function partition(arr, l, r, pivot)
 	{
 		l -= 1;
@@ -259,78 +271,82 @@
 	 * Click handler for all array elements
 	 */
 	function clickHandler(arr, index) {
-		
-		if (!partitioned)
-		{
-			if (pivotIndex == -1)
+	
+		if (!partitioned.value())
+		{		
+			if (pivotIndex.value() == -1)
 			{
 				// Select the pivot
-				pivotIndex = index;
+				pivotIndex.value(index);
 				arr.highlightPivot(index);
 			}
-			else if (pivotIndex == index)
+			else if (pivotIndex.value() == index)
 			{
 				// Deselect the pivot
-				pivotIndex = -1;
+				pivotIndex.value(-1);
 				arr.unhighlight(index);
 			}
-			else if (!pivotMoved)
+			else if (!pivotMoved.value())
 			{
 				// Move the selected pivot to the specified index
-				arr.swap(pivotIndex, index);
-				pivotIndex = index;
-				pivotMoved = true;
+				arr.swap(pivotIndex.value(), index);
+				pivotIndex.value(index);
+				pivotMoved.value(true);
 				
 				// Mark this as a step to be graded and a step that can be undone (continuous feedback)
 				exercise.gradeableStep();
 			}
-			else if (left == -1)
+			else if (left.value() == -1)
 			{
 				// Select the left end of the range to partition
-				left = index;
+				left.value(index);
 				arr.toggleArrow(index);
 			}
-			else if (left == index && index != pivotIndex - 1)
+			else if (left.value() == index && index != pivotIndex.value() - 1)
 			{
+				// In the case of a two element sublist, the left and right end points 
+				// will be the same element: "index != pivotIndex.value() - 1" allows the 
+				// user to select the right endpoint rather than deselecting the left endpoint
+			
 				// Deselect the left end of the range to partition
-				left = -1;
+				left.value(-1);
 				arr.toggleArrow(index);
 			}
-			else if (right == -1)
+			else if (right.value() == -1)
 			{
 				// Select the right end of the range to partition
-				right = index;
-				if (left != right)
+				right.value(index);
+				if (left.value() != right.value())
 				{
 					arr.toggleArrow(index);
 				}
 			}
-			else if (right == index)
+			else if (right.value() == index)
 			{
 				// Deselect the right end of the range to partition
-				right = -1;
+				right.value(-1);
 				arr.toggleArrow(index);
 			}
 		}
 		else 
 		{
-			if (pivotIndex == -1)
+			if (pivotIndex.value() == -1)
 			{
 				// Select the pivot
-				pivotIndex = index;
+				pivotIndex.value(index);
 				arr.highlightPivot(index);
 			}
-			else if (pivotIndex == index)
+			else if (pivotIndex.value() == index)
 			{
 				// Deselect the pivot
-				pivotIndex = -1;
+				pivotIndex.value(-1);
 				arr.unhighlight(index);
 			}
 			else
 			{
 				// Move the pivot to its final location
-				arr.swap(pivotIndex, index);
-				pivotIndex = index;
+				arr.swap(pivotIndex.value(), index);
+				pivotIndex.value(index);
 				
 				// Mark this as a step to be graded and a step that can be undone (continuous feedback)
 				exercise.gradeableStep();
@@ -338,57 +354,69 @@
 		}
 	}
 	
+	/**
+	 * Performs the partition operation on the user array 
+	 * using the pivot value and range specified by the user
+	 */
 	function partitionButton()
 	{
 		// Input validation
-		if (pivotIndex == -1)
+		if (pivotIndex.value() == -1)
 		{
 			alert("Select a pivot element");
 			return;
 		}
 		
-		if (left == -1 || right == -1)
+		if (left.value() == -1 || right.value() == -1)
 		{
 			alert("You must select the range to partition");
 			return;
 		}
 		
-		partition(userArr, left, right + 1, userArr.value(pivotIndex));
+		partition(userArr, left.value(), right.value() + 1, userArr.value(pivotIndex.value()));
 		
-		partitioned = true;
-		pivotMoved = false;		
-		userArr.toggleArrow(left);
-		if (left != right)
+		partitioned.value(true);
+		pivotMoved.value(false);
+		userArr.toggleArrow(left.value());
+		if (left.value() != right.value())
 		{
-			userArr.toggleArrow(right);
+			userArr.toggleArrow(right.value());
 		}
 		
 		// Mark this as a step to be graded and a step that can be undone (continuous feedback)
 		exercise.gradeableStep();
 	}
 	
-	function markSorted()
+	/**
+	 * Marks the currently selected element as sorted
+	 */
+	function markSortedButton()
 	{
 		// Input validation
-		if (pivotIndex == -1)
+		if (pivotIndex.value() == -1)
 		{
 			alert("Select an element to mark as sorted");
 			return;
 		}
 	
-		userArr.markSorted(pivotIndex);
-	
-		// Reset everything for next pivot selection
-		pivotIndex = -1;
-		pivotMoved = false;
-		partitioned = false;
-		left = -1;
-		right = -1;
+		userArr.markSorted(pivotIndex.value());
+		resetStateVars();
 		
 		// Mark this as a step to be graded and a step that can be undone (continuous feedback)
 		exercise.gradeableStep();
 	}
 	
+	/**
+	 * Reset the variables used for each iteration of the algorithm
+	 */
+	function resetStateVars()
+	{
+		pivotIndex.value(-1);
+		pivotMoved.value(false);
+		partitioned.value(false);
+		left.value(-1);
+		right.value(-1);
+	}
 	
 	/**
 	 * Convenience function for highlighting the pivot value in blue
