--- a/AV/Sorting/bubblesortAV.html
+++ b/AV/Sorting/bubblesortAV.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-  <title>Insertion Sort Visualization</title>
+  <title>Bubble Sort Visualization</title>
   <link rel="stylesheet" href="../opendsaAV.css" type="text/css" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-  <link rel="stylesheet" href="quadraticsort.css" type="text/css" />
+  <link rel="stylesheet" href="quadraticsortAV.css" type="text/css" />
 </head>
 
 <body>
@@ -12,7 +12,7 @@
   <input type="button" id="about" name="about" value="About"
          style="margin-top:10px;"/>
   <a class="jsavsettings" href="#">Settings</a>
-  <h1 style="margin-top:-10px;">Insertion Sort Visualization</h1>
+  <h1 style="margin-top:-10px;">Bubble Sort Visualization</h1>
 
   <form id="ssperform" style="margin-top:-5px;">
     <p>
@@ -54,6 +54,6 @@
 <script src="../../JSAV/lib/jquery.transform.light.js"></script>
 <script src="../../JSAV/lib/raphael.js"></script>
 <script src="../../JSAV/build/JSAV-min.js"></script>
-<script src="insertionsort-av.js"></script>
+<script src="bubblesort-av.js"></script>
 </body>
 </html>
