--- a/AV/Sorting/insertionsortAV.html
+++ b/AV/Sorting/insertionsortAV.html
@@ -1,23 +1,18 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-  <title>Selection Sort Visualization</title>
-  <link href="../opendsaAV.css" title="CSS" rel="stylesheet" type="text/css" />
+  <title>Insertion Sort Visualization</title>
+  <link rel="stylesheet" href="../opendsaAV.css" type="text/css" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-  <link rel="stylesheet" href="quadraticsort.css" type="text/css" />
-  <style>
-    #container {
-      height: 610px;
-    }
-  </style>
+  <link rel="stylesheet" href="quadraticsortAV.css" type="text/css" />
 </head>
 
 <body>
 <div id="container">
   <input type="button" id="about" name="about" value="About"
-	 style="margin-top:10px;"/>
+         style="margin-top:10px;"/>
   <a class="jsavsettings" href="#">Settings</a>
-  <h1 style="margin-top:-10px;">Selection Sort Visualization</h1>
+  <h1 style="margin-top:-10px;">Insertion Sort Visualization</h1>
 
   <form id="ssperform" style="margin-top:-5px;">
     <p>
@@ -59,6 +54,6 @@
 <script src="../../JSAV/lib/jquery.transform.light.js"></script>
 <script src="../../JSAV/lib/raphael.js"></script>
 <script src="../../JSAV/build/JSAV-min.js"></script>
-<script src="selectionsort-av.js"></script>
+<script src="insertionsort-av.js"></script>
 </body>
 </html>
